# transcriptor

./: .env.example  .gitignore  README.md  deploy_changeset.py  install.sh  launch.sh  pyproject.toml
alembic/versions/: 0002_add_source_metadata.py  0003_add_document_name.py  0005_add_other_transcription_kind.py  0005_add_page_approved.py  0006_add_user_role.py  0007_add_image_rotation.py  0008_add_approved_by_and_updated_at.py  0009_add_user_progress.py  0010_add_rejected_flag.py  0011_delete_lines_with_events.py  0012_line_fks_cascade_delete.py  0013_add_submitter_fingerprint.py  0014_index_submitter_fingerprint.py
app/: config.py  main.py
app/api/: deps.py
app/api/routes/: admin.py  auth.py  leaderboard.py  progress.py  session.py  transcription.py  xhost_local_emulation.py
app/models/: __init__.py  batch.py  event.py  line.py  page.py  transcription.py  user.py  user_progress.py
app/services/: consent.py  dispatch.py  import_runner.py  leaderboard.py  rules.py  transcriptions.py  users.py
frontend/: .env.production  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  queries.ts  types.ts
frontend/src/components/: ActionBar.tsx  AnnotationEditor.module.css  AnnotationEditor.tsx  AnnotationViewer.module.css  AnnotationViewer.tsx  FlagPopover.tsx  FlagSelector.tsx  (+6 more)
planning/: data_consumer_guide.md
scripts/: deploy.py  export_dataset.py  import_source_data.py
tests/: conftest.py  test_contributed_pages.py  test_progress_profile.py
(+39 files in other folders)
