[project]
name = "transcriptor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.28.0",
    "PyJWT[crypto]>=2.9.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "testcontainers>=4.10.0",
    "docker>=7.1.0",
]
scripts = [
    "pillow>=12.2.0",
    "boto3>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
